Basic add: overidden methods to convert the id into a int and not string, taking httphistory from a synchronized snapshot for safe-thread approach.